[tool.poetry]
name = "gbolo-hashicorp-ansible"
version = "0.1.0"
description = ""
authors = ["gbolo <george.bolo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^8.3.0"
molecule = "^6.0.1"
molecule-plugins = {extras = ["docker"], version = "^23.5.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
